--- a/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
+++ b/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>Insert title hedfgdfgdfgdfgdfgdfgdfgdfgdfgdfre</title>
 </head>
 <body>
-
+	soy oscar y soy gay!!!!!!!
 </body>
 </html>
