--- a/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
+++ b/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
@@ -5,6 +5,6 @@
 <title>Insert title hedfgdfgdfgdfgdfgdfgdfgdfgdfgdfre</title>
 </head>
 <body>
-	soy oscar y soy gay!!!!!!!
+ 	Prueba Jhon!
 </body>
 </html>
