--- a/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
+++ b/PruebaConcepto_WEB/WebContent/WEB-INF/views/index.html
@@ -5,7 +5,8 @@
 <title>Insert title hedfgdfgdfgdfgdfgdfgdfgdfgdfgdfre</title>
 </head>
 <body>
- 	Prueba Diciembre Pachangero !!
+ 	Prueba Diciembre Pachangero !! ********************
+ 	<br>
  	Feliz Año 2013!
 </body>
 </html>
